# DOC-ShapeAXI

./: .gitignore  CMakeLists.txt  ShapeClassification.md  readme.md
CrownSegmentation/: CrownSegmentation.py  list_file.csv
DOCShapeAXI/: CMakeLists.txt  DOCShapeAXI.py  requirements.txt
DOCShapeAXI/Resources/UI/: DOCShapeAXI.ui
DOCShapeAXIcli/: CMakeLists.txt  DOCShapeAXIcli.py  DOCShapeAXIcli.xml  model_path.json
ShapeClassification/: CMakeLists.txt  ShapeClassification.py
ShapeClassification/Resources/UI/: ShapeClassification.ui
ShapeClassification/utils/: install_pytorch.py
ShapeClassificationcli/: CMakeLists.txt  ShapeClassificationcli.py  ShapeClassificationcli.xml  input.csv  model_path.json
